[tool.poetry]
name = "octofarm"
version = "0.1.0"
description = ""
authors = ["Matt Welsh <mdw@fixie.ai>"]
packages = [
    { include = "octofarm/" },
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.3.0"
textual = {extras = ["dev"], version = "^0.27.0"}
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "22.8.0"
isort = "5.10.1"
mypy = "0.971"
autoflake = "1.6.1"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
single_line_exclusions = ["typing", "collections.abc", "typing_extensions"]
skip = ["venv"]

[tool.black]
extend-exclude = '''
/(
  | third_party
  | venv
)/
'''
