[tool.poetry]
name = "octofarm-python"
version = "0.1.0"
description = ""
authors = ["Fixie.ai Team <hello@fixie.ai>"]
packages = [{ include = "octofarm/" }]

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = "~3.9"
dataclasses-json = "0.5.14"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^23.3.0"
isort = "^5.12"
mypy = "^1.3"
autoflake = "^2.1"
requests-mock = "^1.10.0"
types-requests = "^2.31.0.3"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
single_line_exclusions = ["typing", "collections.abc", "typing_extensions"]
skip = ["venv", ".venv", "third_party"]

[tool.black]
extend-exclude = '''
/(
  | venv
)/
'''
